--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,17 @@
 <div>
-  <ul>
-    <li>
-      <a routerLink="employees">Employees</a>
-    </li>
-    <li>
-      <a routerLink="add">Add</a>
-    </li>
-  </ul>
+  <nav class="navbar navbar-expand navbar-dark bg-dark">
+    <a href="#" class="navbar-brand">LOGO</a>
+    <div class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a routerLink="employees" class="nav-link">Employees</a>
+      </li>
+      <li class="nav-item">
+        <a routerLink="add" class="nav-link">Add employee</a>
+      </li>
+    </div>
+  </nav>
 
-  <div>
+  <div class="container mt-3">
     <router-outlet></router-outlet>
   </div>
 </div>
